<resources>
    <string name="app_name">ContactBook</string>
    <string name="book">Agenda</string>
    <string name="contact">Contacto</string>
    <string name="search_contact">Buscar Contacto</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="n_0123456789">0123456789</string>
    <string name="jp">JP</string>
    <string name="add_contact">Contacto agregado</string>
    <string name="delete_contact">Contacto eliminado</string>
    <string name="not_found_contact">Contacto no encontrado</string>
    <string name="call_contact">Llamar contacto</string>

    <string name="invalid_email">Correo electrónico inválido</string>
    <string name="invalid_name">Nombre inválido</string>
    <string name="invalid_phone">Teléfono inválido</string>

    <string name="hint_name">Nombre</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_number">Celular</string>
    <string name="hint_telephone">Teléfono</string>
    <string name="hint_email">Correo</string>

    <string name="cancel">Cancelar</string>
    <string name="agree">Aceptar</string>

    <string name="granted_access">Permisos concedidos</string>
    <string name="text_complete">Texto Completo</string>
    <string name="text_incomplete">Campos incompletos o inconsistentes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="agendar">\u0020\u0020Agendar\u0020\u0020</string>
    <string name="llamar">Llamar</string>
    <string name="create_schedule">Crear Horario</string>
    <string name="example_task">Example Task</string>
    <string name="delete_event">Evento eliminado</string>
    <string name="not_found_event">Evento no encontrado</string>

    <string name="hint_event">Evento</string>
    <string name="hint_date">Fecha</string>
    <string name="hint_clock">Hora</string>
    <string name="btn_cancel">Cancelar</string>

</resources>