<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customAlertDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55FFFFFF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cad_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cp_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineChange50"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearGeneral"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_24"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linear_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/hint_event"
                        app:srcCompat="@drawable/ic_name" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/edt_event"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_event"
                            android:inputType="text"
                            android:maxLength="30"
                            android:importantForAutofill="no"
                            android:maxLines="1" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_event">

                    <ImageView
                        android:id="@+id/img_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/hint_date"
                        app:srcCompat="@drawable/ic_home" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/edt_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_date"
                            android:focusable="false"
                            android:importantForAutofill="no"
                            android:editable="false"
                            android:inputType="none"
                            android:maxLength="30"
                            android:maxLines="1" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_date">

                    <ImageView
                        android:id="@+id/img_clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/hint_clock"
                        app:srcCompat="@drawable/ic_cell_phone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ti_clock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/edt_clock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_clock"
                            android:focusable="false"
                            android:importantForAutofill="no"
                            android:editable="false"
                            android:inputType="none"
                            android:maxLength="30"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <android.widget.Button
                style="@style/Textlight.HintText16"
                android:id="@+id/btn_Cancel"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginStart="@dimen/margin_14"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:text="@string/btn_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineChange50"
                app:layout_constraintTop_toBottomOf="@+id/linearGeneral" />

            <android.widget.Button
                style="@style/Custom.Button.Normal"
                android:id="@+id/btn_Send"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginEnd="@dimen/margin_14"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:text="@string/agendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidelineChange50"
                app:layout_constraintTop_toBottomOf="@+id/linearGeneral" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>